[package]
name = "immic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
immic-packet = { path = "../../crates/immic-packet" }
immic-frame = { path  = "../../crates/immic-frame" }
immic-common = { path = "../../crates/immic-common" }
immic-tls = { path = "../../crates/immic-tls" }

clap = { version = "3.2.16", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
ed25519-dalek = "1.0"
rand = "0.7"