[package]
name = "immic-packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
immic-common = { path = "../immic-common" }
immic-crypto = { path = "../immic-crypto" }

thiserror = "1.0"
byteorder = "1.4"
rand = { version = "0.8", features = ["std_rng"] }