[package]
name = "refuic-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuic-common = { path = "../refuic-common" }
refuic-packet = { path = "../refuic-packet" }

thiserror = "1.0"
tokio = { version = "1.0", features = ["net"] }