[package]
name = "refuic-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuic-crypto = { path = "../refuic-crypto" }
refuic-common = { path = "../refuic-common" }

byteorder = "1.4"
thiserror = "1.0"
rand = { version = "0.8", features = ["std_rng"] }
spki = "0.6"

[dev-dependencies]
anyhow = "1.0"