[package]
name = "refuic-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuic-crypto = { path = "../refuic-crypto" }
refuic-common = { path = "../refuic-common" }

byteorder = "1.4"
thiserror = "1.0"
rand = "0.7"
ed25519-dalek = "1.0"
spki = "0.6"

[dev-dependencies]
anyhow = "1.0"